--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,12 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+   .content-wrapper{
+       width: 90%;
+       margin: 50px 0;
+   }
+
+
 /*----------------Base Header - Footer styles-----------------*/
 
 header, 
@@ -107,15 +113,26 @@ footer{
     flex-flow: row wrap;
 }
 
+header{
+    padding: 15px 0;
+}
+
 header .content-wrapper{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    margin: 0;
 }
 
+.header-divider{
+    width: 100%;
+    height: 1px;
+    margin: 10px 0 20px 0;
+}
 
 header nav{
+    width: 60%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -123,10 +140,27 @@ header nav{
 }
 
 header nav ul{
+    width: 100%;
     display: flex;
     justify-content: space-around;
 }
 
+footer{
+    flex-direction: column;
+}
+
+footer .content-wrapper{
+    width: 55%;
+    margin: 50px 0;
+}
+
+footer p {
+    margin: 0;
+}
+
+footer .contact{
+    margin-bottom: 50px;
+}
 
 footer .social-icons{
     display:flex;
@@ -145,6 +179,10 @@ footer .social{
     justify-content: space-between;
     align-items: center;
 }
+
+footer .copyright{
+    margin: 20px 0;
+}
 /*----------------Mobile Styles - Homepage-----------------*/
 
 /*** Hero Area ***/
@@ -159,7 +197,8 @@ footer .social{
 
 aside{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
     flex-flow: row wrap;
 }
 /*** Features ***/
@@ -170,6 +209,15 @@ aside{
     flex-flow: row wrap;
 }
 
+.features h2{
+    margin-bottom: 60px;
+}
+
+.features article{
+    width: 55%;
+    margin: 30px 0;
+}
+
 
 .features .features-items{
     display: flex;
@@ -178,10 +226,25 @@ aside{
     flex-flow: row wrap;
 }
 
+.features p{
+    margin: 0;
+}
+
+/*** Reviews ***/
+
 .reviews{
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
+}
+
+.reviews h2{
+    margin-bottom: 40px;
+}
+
+.reviews h3{
+    width: 55%;
+    margin: 20px 0;
 }
 
 
@@ -203,6 +266,10 @@ aside{
     flex-flow: row wrap;
 }
 
+.contact-content p{
+    margin: 0;
+}
+
 
 /* ==============================================================
    FAQ Page
@@ -218,10 +285,19 @@ aside{
 }
 
 .faq .content-wrapper{
+    margin: 50px 0 0 0;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+}
+
+.faq h2{
+    margin-bottom: 40px;
+}
+
+.faq-content{
+    margin-bottom: 50px;
 }
 
 
