--- a/css/main.css
+++ b/css/main.css
@@ -97,10 +97,10 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-   .content-wrapper{
-       width: 90%;
-       margin: 50px 0;
-   }
+.content-wrapper{
+    width: 90%;
+    margin: 50px 0;
+}
 
 
 /*----------------Base Header - Footer styles-----------------*/
@@ -488,9 +488,9 @@ aside{
             width: 100%;
         }
 
-        /* ==============================================================
-           About Page
-           ============================================================== */
+/* ==============================================================
+    About Page
+   ============================================================== */
 
         .mission-content{
             display: flex;
@@ -513,9 +513,9 @@ aside{
         }
 
 
-        /* ==============================================================
-           FAQ Page
-           ============================================================== */
+/* ==============================================================
+    FAQ Page
+   ============================================================== */
 
         .faq .content-wrapper{
             justify-content: space-between;
@@ -529,11 +529,79 @@ aside{
             width: 100%;
         }
 
-    }
+}
 
 @media only screen and (min-width: 1200px) {
-    /*Desktop styles here*/
-    }   
+    /*------------- Desktop styles here ------------*/
+     
+
+        .content-wrapper{
+            max-width: 960px;
+        }
+
+
+    /*** Hero ***/
+
+        .hero-area h1{
+            width: 60%;
+        }
+
+
+    /*** Aside ***/
+
+        aside .content-wrapper{
+            justify-content: space-around;
+        }
+
+        aside .content-wrapper .form-description,
+        aside .content-wrapper .form{
+        width: 30%;
+        }
+
+
+    /*** Features ***/
+
+        .features h2{
+            width: 70%;
+        }
+
+        .features article{
+            flex-basis: 33%;
+        }
+
+
+    /*** Reviews ***/
+
+        .reviews article div{
+            width: 42%;
+        }
+
+/* ==============================================================
+    About Page
+   ============================================================== */
+
+       .mission h2,
+       .contact-section .content-wrapper h2{
+           width: 100%;
+       }
+
+       .contact-section .content-wrapper h2{
+           margin-bottom: 40px;
+       }
+
+/* ==============================================================
+    FAQ Page
+   ============================================================== */
+
+       .faq h2{
+           width: 100%;
+       }
+
+       .faq-content{
+           flex-basis: 35%;
+       }
+
+}
 
 /* ==========================================================================
    Print styles.
