adding remaining styles

--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,7 @@ body{
     font-family: 'Open Sans', sans-serif;
     font-size: 1em;
     text-align: left;
+    color: #e2e3ed;
 }
 
 ul,
@@ -121,12 +122,15 @@ a{
 
 h2{
     font-family: 'Poppins', sans-serif;
+    font-weight: 500;
     font-size: 1.875em;
 }
 
 h3,
 h4{
     font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 1.125em;
     margin: 20px 0;
 }
 
@@ -149,6 +153,7 @@ address{
 
 header, 
 footer{
+    background-color: #202322;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -160,14 +165,15 @@ header{
 }
 
 header .content-wrapper{
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
-    margin: 0;
 }
 
 .header-divider{
+    background: #3a3a3a;
     width: 100%;
     height: 1px;
     margin: 10px 0 20px 0;
@@ -175,6 +181,9 @@ header .content-wrapper{
 
 header nav{
     width: 60%;
+    font-size: 1.125em;
+    font-weight: 700;
+    text-transform: uppercase;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -187,7 +196,12 @@ header nav ul{
     justify-content: space-around;
 }
 
+header nav ul li{
+    font-size: 1.125em;
+}
+
 footer{
+    text-align: center;
     flex-direction: column;
 }
 
@@ -216,12 +230,6 @@ footer .social-icons p{
     align-items: center;
 }
 
-.footer .social{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 footer .copyright{
     margin: 20px 0;
 }
@@ -238,11 +246,39 @@ footer .copyright{
 /*** Aside ***/
 
 aside{
+    background-color: #527158;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
 }
+
+aside .form {
+    margin-top: 30px;
+}
+   
+input[type=text] {
+    box-sizing: border-box;
+    width: 100%;
+    color: #2a423a;
+    font-style: italic;
+}
+   
+input[type=button] {
+    width: 100%;
+    padding: 20px 0;
+    margin-top: 20px;
+    background-color: #2a423a;
+    font-family: 'Poppins', Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    font-size: 1.125em;
+    color: #e2e3ed;
+    border: none;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+
 /*** Features ***/
 
 .features{
@@ -269,12 +305,14 @@ aside{
 }
 
 .features p{
+    text-align: center;
     margin: 0;
 }
 
 /*** Reviews ***/
 
 .reviews{
+    background-color: #2a423a;
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
@@ -282,6 +320,7 @@ aside{
 
 .reviews h2{
     margin-bottom: 40px;
+    line-height: 1;
 }
 
 .reviews h3{
@@ -295,6 +334,7 @@ aside{
    ============================================================== */
 
 .mission{
+    background-color: #527158;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -302,6 +342,7 @@ aside{
 }
 
 .contact-section{
+    background-color: #2a423a;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -320,6 +361,7 @@ aside{
 
 
 .faq{
+    background-color: #527158;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -336,10 +378,16 @@ aside{
 
 .faq h2{
     margin-bottom: 40px;
+    line-height: 1;
 }
 
 .faq-content{
     margin-bottom: 50px;
+}
+
+.faq-content h4{
+    line-height: 1.333;
+    font-weight: 700;
 }
 
 
@@ -440,6 +488,16 @@ aside{
             margin: 100px 0;
         }
 
+        h2{
+            font-size: 2.25em;
+            line-height: 1.333;
+        }
+
+        h3{
+            font-size: 1.5em;
+            line-height: 1.25;
+        }
+
         /*** Header ***/
 
         header{
@@ -449,6 +507,10 @@ aside{
         header .content-wrapper{
             width: 100%;
             justify-content: space-between;
+        }
+
+        header figure{
+            width: 30%;
         }
 
         header nav{
@@ -467,6 +529,12 @@ aside{
 
         /*** Hero Area ***/
 
+        .hero-area h1{
+            font-size: 3em;
+            line-height: 1;
+            margin: 0;
+        }
+
         /*** Aside ***/
 
         aside .content-wrapper{
@@ -484,6 +552,10 @@ aside{
 
 
         /*** Features ***/
+
+        .features h2{
+            margin: 0 20px 20px 0;
+        }
 
         .features article{
             display: flex;
@@ -504,8 +576,17 @@ aside{
             justify-content: space-between;
         }
 
+        .reviews h2{
+            width: 90%;
+        }
+
         .reviews article div{
             width: 49%;
+        }
+
+        .reviews h3{
+            width: 75%;
+            margin: 0;
         }
 
 
@@ -516,14 +597,25 @@ aside{
             margin: 100px 0;
         }
 
-        .footer-content{
+
+        footer .footer-content{
             display: flex;
             justify-content: space-between;
             align-items: center;
+            flex-direction: row;
         }
 
         footer .contact{
             margin-bottom: 0;
+        }
+
+        footer h4{
+            font-size: 1.5em;
+            margin-bottom: 40px;
+        }
+
+        footer p{
+            line-height: 1.285;
         }
 
         footer .copyright{
@@ -554,6 +646,10 @@ aside{
            align-items: flex-start;
         }
 
+        .contact-content h4{
+            font-size: 1.5em;
+        }
+
 
 /* ==============================================================
     FAQ Page
@@ -571,6 +667,12 @@ aside{
             width: 100%;
         }
 
+        .faq h4,
+        .faq p{
+            font-size: 0.875em;
+            line-height: 1.125;
+        }
+
 }
 
 @media only screen and (min-width: 1200px) {
@@ -581,10 +683,25 @@ aside{
             max-width: 960px;
         }
 
+        h2{
+            font-size: 2.25em;
+        }
+
+        h3,
+        h4{
+            font-size: 1.875em;
+        }
+
+        p{
+            font-size: 1.125em;
+            line-height: 1.333;
+        }
+
 
     /*** Hero ***/
 
         .hero-area h1{
+            font-size: 3.75em;
             width: 60%;
         }
 
@@ -598,6 +715,10 @@ aside{
         aside .content-wrapper .form-description,
         aside .content-wrapper .form{
         width: 30%;
+        }
+
+        .form-description p{
+            font-size: 1.125em;
         }
 
 
@@ -625,10 +746,15 @@ aside{
        .mission h2,
        .contact-section .content-wrapper h2{
            width: 100%;
+           font-size: 3em;
        }
 
        .contact-section .content-wrapper h2{
            margin-bottom: 40px;
+       }
+
+       .contact-content h4{
+           font-size: 1.875em;
        }
 
 /* ==============================================================
@@ -637,10 +763,17 @@ aside{
 
        .faq h2{
            width: 100%;
+           font-size: 3em;
        }
 
        .faq-content{
            flex-basis: 35%;
+       }
+
+       .faq h4,
+       .faq p{
+           font-size: 1.125em;
+           line-height: 1;
        }
 
 }
