--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,14 @@ p{
     line-height: 1.285em;
 }
 
+img{
+    width: 100%;
+}
+
+figure{
+    margin: 0;
+}
+
 address{
     font-style: normal;
 }
@@ -166,6 +174,14 @@ header{
 
 header .content-wrapper{
     margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+header figure{
+    width: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -238,10 +254,19 @@ footer .copyright{
 /*** Hero Area ***/
 
 .hero-area{
+    background: url(../img/jake-melara-30679-unsplash.jpg);
+    background-size: cover;
+    background-position: center;
+    min-height: 500px;
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
 }
+
+.hero-area h1{
+    font-size: 2.25em;
+}
+
 
 /*** Aside ***/
 
@@ -282,6 +307,9 @@ input[type=button] {
 /*** Features ***/
 
 .features{
+    background: url('../img/rawpixel-800820-unsplash1.jpg');
+    background-size: cover;
+    background-position: center;
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
@@ -571,7 +599,7 @@ input[type=button] {
 
         /*** Reviews ***/
 
-        .review article{
+        .reviews article{
             display: flex;
             justify-content: space-between;
         }
@@ -580,9 +608,11 @@ input[type=button] {
             width: 90%;
         }
 
+        .reviews article figure,
         .reviews article div{
             width: 49%;
         }
+
 
         .reviews h3{
             width: 75%;
