--- a/css/main.css
+++ b/css/main.css
@@ -381,6 +381,22 @@ input[type=button] {
     margin: 0;
 }
 
+.map figure{
+    position: relative;
+    padding-bottom: 80%;
+    width:100%;
+    height: 0;
+    overflow: hidden;
+}
+
+.map iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 
 /* ==============================================================
    FAQ Page
