--- a/css/main.css
+++ b/css/main.css
@@ -369,18 +369,6 @@ input[type=button] {
     flex-flow: row wrap;
 }
 
-.contact-section{
-    background-color: #2a423a;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-}
-
-.contact-content p{
-    margin: 0;
-}
-
 .map figure{
     position: relative;
     padding-bottom: 80%;
@@ -396,6 +384,20 @@ input[type=button] {
     width: 100%;
     height: 100%;
 }
+
+
+.contact-section{
+    background-color: #2a423a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
+.contact-content p{
+    margin: 0;
+}
+
 
 
 /* ==============================================================
@@ -682,6 +684,10 @@ input[type=button] {
             width: 40%;
         }
 
+        .map figure{
+            padding-bottom: 45.5%;
+        }
+
         .contact-section .content-wrapper h2{
             width: 80%
         }
@@ -788,7 +794,12 @@ input[type=button] {
 /* ==============================================================
     About Page
    ============================================================== */
+        
 
+       .map figure{
+           padding-bottom: 37.5%;
+       }
+       
        .mission h2,
        .contact-section .content-wrapper h2{
            width: 100%;
