--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,8 @@ body{
 ul,
 ol{
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 a{
@@ -124,6 +126,7 @@ h2{
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
     font-size: 1.875em;
+    margin: 0;
 }
 
 h3,
@@ -622,6 +625,10 @@ input[type=button] {
 
         .features .features-item-description{
             width: 50%;
+        }
+
+        .features i{
+            margin-bottom: 30px;
         }
 
         /*** Reviews ***/
